# telos

./: .gitignore  Dockerfile  LICENSE  MAINTAINERS  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docs/: roadmap.md
docs/retrofits/: bbq.md  ccmatic.md  ratemon.md
examples/: bbrv3-kernel-fidelity.yaml  bbrv3-starvation.yaml  bbrv3_reference.py  cubic.yaml  reno.yaml
fmcad-2026/: README.md
fmcad-2026/dafny/: BBRv3PatchedFilter.dfy  BBRv3Trace.dfy  Cubic.dfy  Reno.dfy
fmcad-2026/experiments/: README.md  b_d_grid.py  cpu_sim_aimd.py  hypothesis_cubic.py  hypothesis_patched.py  hypothesis_reno.py  hypothesis_sweep.py  lean_to_sv.py  mutation_sweep.py  preregister_clocked_ack.md
fmcad-2026/experiments/figures/: fig_bmc_sweep.py  fig_fstar_panel.py  fig_lean_proof_size.py  fig_mutation_kill.py  fig_proof_dag.py  fig_residual.py  fig_residual_ecdf_scatter.py  fig_trajectory.py
fmcad-2026/experiments/reference_cca/: aimd_lean_port.py  (+1 more)
fmcad-2026/figures/: fig_bd_heatmap.py  fig_ebmc_times.py  fig_mutation_kill.py  fig_pareto_surface.py  fig_pipeline_src.tex
fmcad-2026/kernel_replay/: Dockerfile  README.md  ack_schedule.py  run_sweep.py  sanity_cell.py  t_refined.py
fmcad-2026/lean/: README.md  lake-manifest.json  lakefile.lean
fmcad-2026/sv/: README.md  bbr3_invariants.sv  bbr3_patched_invariants.sv  bbr3_patched_trace.sv  bbr3_trace.sv
telos/: __init__.py  cli.py  verdict.py
telos/backends/: __init__.py  cpusim.py  dafny.py  ebmc.py  hypothesis_be.py  lean4.py
telos/spec/: __init__.py  schema.py
tests/: test_spec_load.py
(+83 files in other folders)
